@@ -1,5 +1,7 @@
 Changelog for mysql-archiver:
 
+   * The --no-ascend option caused too many bind variables to be used.
+
 2007-11-04: version 1.0.2
 
    * Made command-line help easier to use.
